// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/Slider Base slider: Forms/Slider Base slider 1`] = `
.c0 {
  overflow: visible;
  padding: 10px 0;
  background-color: #fff;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
   
  <div
    className="c0"
  >
    <span
      className="MuiSlider-root"
      onMouseDown={[Function]}
    >
      <span
        className="MuiSlider-rail"
      />
      <span
        className="MuiSlider-track"
        style={
          Object {
            "left": "0%",
            "width": "10%",
          }
        }
      />
      <input
        type="hidden"
        value="10"
      />
      <span
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={10}
        className="MuiSlider-thumb"
        data-index={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="slider"
        style={
          Object {
            "left": "10%",
          }
        }
        tabIndex={0}
      />
    </span>
  </div>
</div>
`;

exports[`Storyshots Forms/Slider With icon: Forms/Slider With icon 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
  fill: rgba(0,0,0,0.54);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .c1:first-child {
  margin-right: 16px;
}

.c0 .c1:last-child {
  margin-left: 16px;
}

.c0 .c1:first-child > span,
.c0 .c1:last-child > span {
  vertical-align: middle;
}

.c0 .c1:first-child input,
.c0 .c1:last-child input {
  text-align: center;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
   
  <div
    className="c0"
  >
    <div
      className="c1 "
    >
      <span
        className=" star icon c2"
      >
        <svg
          className="c3"
          size="m"
        >
          <use
            href="#icon-star"
            xlinkHref="#icon-star"
          />
        </svg>
      </span>
    </div>
    <span
      className="MuiSlider-root"
      onMouseDown={[Function]}
    >
      <span
        className="MuiSlider-rail"
      />
      <span
        className="MuiSlider-track"
        style={
          Object {
            "left": "0%",
            "width": "10%",
          }
        }
      />
      <input
        type="hidden"
        value="10"
      />
      <span
        aria-orientation="horizontal"
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={10}
        className="MuiSlider-thumb"
        data-index={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        role="slider"
        style={
          Object {
            "left": "10%",
          }
        }
        tabIndex={0}
      />
    </span>
    <div
      className="c1 "
    >
      <span
        className=" star icon c2"
      >
        <svg
          className="c3"
          size="m"
        >
          <use
            href="#icon-star"
            xlinkHref="#icon-star"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
